Fix the layout bug again

--- a/src/_sass/_webring.scss
+++ b/src/_sass/_webring.scss
@@ -28,7 +28,7 @@
 
 .tcwr__logo {
   animation: funky infinite 4s;
-  height: 100%;
+  max-height: 100%;
   margin: auto;
   transform: rotate(-8deg);
 }
